project/GCP YAML/cashier/cashier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashierapp-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: cashierapp
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: cashierapp
    spec:
      containers:
        - name: cashierapp
          image: mujunyu520/cashierapp:v1.8s
          ports:
            - containerPort: 8080
