project/GCP YAML/cashier/cashier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cashier-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: cashierapp
