project/GCP YAML/cashier/cashier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata:
  name: "cashier-ingress"
  namespace: "default"
spec:
  defaultBackend:
    service:
      name: "cashier-service"
      port:
        number: 80
